[package]
name = "right_to_ask_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
futures = "0.3"
anyhow = "1.0"
merkle-tree-bulletin-board = { path="../../bulletin-board/merkle-tree-bulletin-board"}
mysql = "21.0"
merkle-tree-bulletin-board-backend-mysql = { path="../../bulletin-board/merkle-tree-bulletin-board-backend-mysql"}
ed25519-dalek = "1.0"
base64 = "0.13"
toml = "0.5"
hex = "0.4"
pkcs8 = {version = "0.7", features = ["alloc"] }