[package]
name = "right_to_ask_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
futures = "0.3"
anyhow = "1.0"
merkle-tree-bulletin-board = "0.1"
mysql = "21.0"
merkle-tree-bulletin-board-backend-mysql = "0.1"
ed25519-dalek = "1.0"
base64 = "0.13"
toml = "0.5"
hex = "0.4"
pkcs8 = {version = "0.7", features = ["alloc"] }
csv = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.2"
pdf = "0.7"
scraper = "0.12"
itertools = "0.10"
regex = "1"
calamine = "0.18"
sha2 = "0.10"

# Just used for binaries. May be removed in future.
tokio = { version = "1", features = ["full"] }