[package]
name = "right_to_ask_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
right_to_ask_api = { path="../right_to_ask_api" }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
# actix-rt = "1"
actix-files = "0.6"
lazy_static = "1.4"
anyhow = "1.0"
merkle-tree-bulletin-board = "0.1"
