[package]
name = "right_to_ask_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
right_to_ask_api = { path="../right_to_ask_api" }
word_comparison = { path = "../word_comparison" }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-files = "0.6"
anyhow = "1.0"
merkle-tree-bulletin-board = "0.1"
