[package]
name = "word_comparison_demo_webserver"
version = "0.1.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.11"
log = "0.4.17" # Not actually needed for this crate, but needed to make the whole thing compile. At some point this should be removed.
word_comparison = { path = "../word_comparison" }
anyhow = "1.0"


